# YuLin-lab

./: .gitignore  README.md  Translate.py  aruco.py  control1.py  robot  robot.service  robot.sh  test.py  test_UR.py
DucoCobotAPI_py/: DucoCobot.py  ToDo.txt  Translate.py  aruco.py  aruco_810.py  cvs_test.csv  data.txt  demo.py  demo_test.py  lab.py  lab_test.py  labcanguan.py  test.py  test_lab.py  tube_motor.py
DucoCobotAPI_py/gen_py/robot/: RPCRobot-remote  RPCRobot.py
action_tset1/: CMakeLists.txt  package.xml
action_tset1/action/: Addints.action
action_tset1/script/: charge.py  client_action07.py  client_action08.py  server_action07.py
action_tset1/src/: test.py
agvcom_linux01/: agvcom_linux01.pro
agvcom_linux01/agvcom_linux/: Makefile  agvcom_linux.pro  agvcomm  agvcomm_zh_CN.ts  client.cpp  main.cpp  settings.h  ui_widget.h  widget.cpp
agvcom_linux01/agvcom_linux/release/: moc_widget.cpp
agvcom_linux02/: Makefile  agvcom_linux02.pro
agvcom_linux02/agvcom_linux/: Makefile  agvcom_linux.pro  agvcomm  agvcomm.pro  agvconfig.ini  main.cpp  moc_widget.cpp  settings.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
aruco_ros-noetic-devel/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
robotiq-noetic-mods/: robotiq.py
tube_feature_fail/: CMakeLists.txt  README.md  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d3d.cpp
tube_huofu/src/: 1.cpp  2.cpp  CMakeLists.txt  README.md  Translate.py  UR_test.py  opencv.py  opencv1.py  test_UR.py  test_UR1.py
(+34 files in other folders)
